@@ -26,3 +26,6 @@ clean:
 dist:
 	$(MAKE) dist-zip EXE=.exe prefix=$(prefix) VERSIONSUFFIX="-dos32" ZIPOBJ_EXTRA="${ZIPOBJ_EXTRA}" ENABLE_NLS=$(ENABLE_NLS)
 
+strip:
+	$(MAKE) strip LINK="cp -f"
+
