@@ -29,3 +29,6 @@ clean:
 dist:
 	$(MAKE) dist-zip EXE=.exe prefix=$(prefix) VERSIONSUFFIX="-win32" ZIPOBJ_EXTRA="${ZIPOBJ_EXTRA}" ENABLE_NLS=$(ENABLE_NLS)
 
+strip:
+	$(MAKE) strip LINK="cp -f"
+
